--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 		
 	</head>
 	<body>
- 		<div id="title_bar">Phone<strong>Gap</strong> Training App</div>
+ 		<div id="title_bar">Phone<strong>Gap</strong></div>
 
 		<div id="welcome" class="view">
-		  <div class="app_button" id="map_button">Show My Location</div>
-  	      <div class="app_button" id="settings_button">Settings</div>
+		  <div class="app_button" id="map_button">Dove mi trovo</div>
+  	      <div class="app_button" id="settings_button">Configura</div>
 		</div>
 
 		<div id="map" class="view">
@@ -41,11 +41,11 @@
 		<div id="settings" class="view">
 		  <form id="settings_form">
 		    <fieldset>
-		      <legend>Map Type</legend>
-			  <input type="radio" name="map" value="roadmap" checked>Road Map<br/>
+		      <legend>Tipo</legend>
+			  <input type="radio" name="map" value="mappa" checked>Road Map<br/>
 		      <input type="radio" name="map" value="satellite">Satellite<br/>
 		      <input type="radio" name="map" value="terrain">Terrain<br/>
-		      <input type="radio" name="map" value="hybrid">Hybrid<br/>
+		      <input type="radio" name="map" value="ibrida">Hybrid<br/>
 		    </fieldset>
 		    <fieldset>
 		      <legend>Zoom Level</legend>
@@ -55,7 +55,7 @@
   		      <input type="radio" name="zoom" value="18">Close<br/>
   		      <input type="radio" name="zoom" value="20">Super Close<br/>
   		     </fieldset>
-		      <button id="save_button">Save</button>
+		      <button id="save_button">Salva</button>
 	      </form>
 		</div>
 
