--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width" />
-		<title>Training App</title>
+		<title>Test App</title>
 		<link rel="stylesheet" href="assets/css/master.css" type="text/css" media="screen" />
 		
 		<script src="phonegap.js" type="text/javascript" charset="utf-8"></script>
@@ -34,26 +34,26 @@
 		  <div class="map_image">
               <img id="static_map" src="assets/img/staticmap.png">
 		  </div>
-		  <p>This is where you are</p>
-		  <div class="app_button" id="welcome_button">Go Back</div>
+		  <p>Tu sei qui...!</p>
+		  <div class="app_button" id="welcome_button">Indietro</div>
 		</div>
 
 		<div id="settings" class="view">
 		  <form id="settings_form">
 		    <fieldset>
 		      <legend>Tipo</legend>
-			  <input type="radio" name="map" value="mappa" checked>Road Map<br/>
+			  <input type="radio" name="map" value="mappa" checked>Mappa stradale<br/>
 		      <input type="radio" name="map" value="satellite">Satellite<br/>
-		      <input type="radio" name="map" value="terrain">Terrain<br/>
-		      <input type="radio" name="map" value="ibrida">Hybrid<br/>
+		      <input type="radio" name="map" value="terrain">Terreno<br/>
+		      <input type="radio" name="map" value="ibrida">Ibrida<br/>
 		    </fieldset>
 		    <fieldset>
 		      <legend>Zoom Level</legend>
-  		      <input type="radio" name="zoom" value="10">Super Far<br/>
-  		      <input type="radio" name="zoom" value="12">Far<br/>
-  		      <input type="radio" name="zoom" value="15" checked>Normal<br/>
-  		      <input type="radio" name="zoom" value="18">Close<br/>
-  		      <input type="radio" name="zoom" value="20">Super Close<br/>
+  		      <input type="radio" name="zoom" value="10">Molto lontano<br/>
+  		      <input type="radio" name="zoom" value="12">Lontano<br/>
+  		      <input type="radio" name="zoom" value="15" checked>Normale<br/>
+  		      <input type="radio" name="zoom" value="18">Vicino<br/>
+  		      <input type="radio" name="zoom" value="20">Molto vicino<br/>
   		     </fieldset>
 		      <button id="save_button">Salva</button>
 	      </form>
